# handball_01

./: .gitignore  CHANGELOG.md  README.md  TELEPITES.md
backend/: README.md  pyproject.toml
backend/handball/: __init__.py  storage.py
backend/handball/api/: __init__.py  app.py
backend/handball/models/: __init__.py  events.py  tracking.py
backend/handball/pipeline/: __init__.py  _homography.py  analytics.py  appearance.py  attack_types.py  ball_filter.py  ball_reacquire.py  benchmark.py  broadcast.py  broadcast_lines.py  calibration.py  clips.py  coach_summary.py  (+41 more)
backend/scripts/: benchmark.py  collect_dataset.py  compare_models.py  finetune.py  process_video.py  run_pipeline.py  serve.py  simulate_match.py  train_digit_net.py  validate_match.py
backend/tests/: test_analytics.py  test_appearance.py  test_attack_types.py  test_ball_filter.py  test_ball_reacquire.py  test_benchmark.py  test_broadcast.py  test_broadcast_lines.py  test_calib_region.py  test_calibration.py  test_clips.py  test_coach_summary.py  test_coaching.py  test_dataset.py  test_decisions.py  test_defense.py  test_demo_episodes.py  test_detect_preview.py  test_device.py  test_estimation.py  test_event_detection.py  test_fusion.py  test_goalkeeper.py  test_graceful_stop.py  test_halftime.py  test_homography_extra.py  test_intensity.py  test_intensity_trend.py  test_jersey_ocr.py  test_jerseys_api.py  test_job_stall.py  test_library_api.py  test_library_summary.py  test_lidar.py  test_match_report.py  test_merge.py  test_model_eval.py  test_momentum.py  test_notes_api.py  test_package_api.py  (+30 more)
(+62 files in other folders)
